chore: scaffold dev-tools workspace

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "workspaces": [
     "apps/*",
     "packages/*",
-    "docs"
+    "docs",
+    "packages/dev-tools"
   ],
   "scripts": {
     "lint": "turbo run lint",
